--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,5 +4,8 @@
 
 @charset "utf-8";
 
+$link-color: #c0022f; 
+
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
