--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,96 @@
 @charset "utf-8";
 
 $link-color: #c0022f; 
+/* type scale */
+// $type-size-1 : 2.441em;  // ~39.056px
+// $type-size-2 : 1.953em;  // ~31.248px
+// $type-size-3 : 1.563em;  // ~25.008px
+// $type-size-4 : 1.25em;   // ~20px
+// $type-size-5 : 1em;      // ~16px
+// $type-size-6 : 0.75em;   // ~12px
+// $type-size-7 : 0.6875em; // ~11px
+// $type-size-8 : 0.625em;  // ~10px
 
+pre {
+    white-space: pre-wrap;
+    font-size: 0.75em
+}
+
+
+/* dracula syntax highlighting (base16) */
+/* https://github.com/dracula/base16-dracula-scheme */
+// $base00: #1c1e33;
+// $base01: #3a3c4e;
+// $base02: #4d4f68;
+// $base03: #626483;
+// $base04: #62d6e8;
+// $base05: #e9e9f4;
+// $base06: #f1f2f8;
+// $base07: #f7f7fb;
+// $base08: #ea51b2;
+// $base09: #b45bcf;
+// $base0a: #00f769;
+// $base0b: #ebff87;
+// $base0c: #a1efe4;
+// $base0d: #62d6e8;
+// $base0e: #b45bcf;
+// $base0f: #00f769;
+
+// CIRCUS
+
+
+// TOMORROW NIGHT
+// $base00: #1d1f21;
+// $base01: #282a2e;
+// $base02: #373b41;
+// $base03: #969896;
+// $base04: #b4b7b4;
+// $base05: #c5c8c6;
+// $base06: #e0e0e0;
+// $base07: #ffffff;
+// $base08: #cc6666;
+// $base09: #de935f;
+// $base0A: #f0c674;
+// $base0B: #b5bd68;
+// $base0C: #8abeb7;
+// $base0D: #81a2be;
+// $base0E: #b294bb;
+// $base0F: #a3685a;
+
+//TOMORROW NIGHT EIGHTIES
+// $base00: #2d2d2c;
+// $base01: #393939;
+// $base02: #515151;
+// $base03: #999999;
+// $base04: #b4b7b4;
+// $base05: #cccccc;
+// $base06: #e0e0e0;
+// $base07: #ffffff;
+// $base08: #f2777a;
+// $base09: #f99157;
+// $base0A: #ffcc66;
+// $base0B: #99cc99;
+// $base0C: #66cccc;
+// $base0D: #6699cc;
+// $base0E: #cc99cc;
+// $base0F: #a3685a;
+
+$base00: #1e1e1e;
+$base01: #323537;
+$base02: #464b50;
+$base03: #5f5a60;
+$base04: #838184;
+$base05: #a7a7a7;
+$base06: #c3c3c3;
+$base07: #ffffff;
+$base08: #cf6a4c;
+$base09: #cda869;
+$base0A: #f9ee98;
+$base0B: #8f9d6a;
+$base0C: #afc4db;
+$base0D: #7587a6;
+$base0E: #9b859d;
+$base0F: #9b703f;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
