--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -110,10 +110,13 @@ body {
 		}
 	}
 
+  li {
+    font-size: 1em;
+  }
+
   p,
-  li,
   dl {
-    font-size: 0.8em;
+    font-size: 0.9em;
   }
 
   /* paragraph indents */
